Opened 18 years ago

Closed 18 years ago

Last modified 14 years ago

#1146 closed bug (fixed)

The auich driver miscounts on controls, turns of amp early, never turns it of on shutdown, and UI improvement

Reported by: tqh Owned by: korli
Priority: normal Milestone: R1
Component: Drivers/Audio/auich Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

The auich driver makes noise on shutdown because the amplifier is left on after shutdown, the amplifier is also turned on directly after init. The patch changes this to be the last thing to be turned on, and the first to be turned of.

The creation of controls had an of by 1 error where the last control was skipped.

Also made the controls more UI friendly so that the 'boost mic +20dB' is a part of the mic control instead of it's own tab, and the AC97 mixer tab is changed to be the first one as it is probably more used than the 'Record' tab, which now is called 'Recording'.

Very nice driver though...

Attachments (1)

auich.patch (9.5 KB ) - added by tqh 18 years ago.
auich patch

Download all attachments as: .zip

Change History (3)

by tqh, 18 years ago

Attachment: auich.patch added

auich patch

comment:1 by korli, 18 years ago

Resolution: fixed
Status: newclosed

Applied in hrev20646. Thanks a lot !

comment:2 by diver, 14 years ago

Component: Drivers/AudioDrivers/Audio/AUICH
Note: See TracTickets for help on using tickets.